# MPC-voting-system

./: Cargo.toml  README.md  voting_server.exe.lnk
py_lib/: ling_alg_solver.py  welch-berlekamp.py
src/: additive.rs  client.rs  client2.rs  lagrange.rs  main.rs  protocol.rs  server.rs  server2.rs  server_.rs  shamir.rs  terminal_input.rs  test.rs  welch-berlekamp.py
