[package]
name = "voting_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
num = "0.4.0"
num-bigint = "0.4.3"
serde = {version="1.0.136", features=["derive"]}
serde_json = "1"
tokio = "1.17.0"